@@ -39,13 +39,14 @@ import org.opennms.taskset.contract.TaskType;
 import org.springframework.stereotype.Component;
 
 import static org.opennms.horizon.inventory.service.taskset.TaskUtils.identityForAzureTask;
+import static org.opennms.horizon.inventory.service.taskset.TaskUtils.identityForNodeScan;
 
 
 import java.util.List;
+import java.util.Optional;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ThreadFactory;
-import java.util.stream.Collectors;
 
 import org.opennms.horizon.inventory.dto.IpInterfaceDTO;
 import org.opennms.horizon.inventory.dto.NodeDTO;
@@ -68,8 +69,12 @@ public class ScannerTaskSetService {
     }
 
     public void sendNodeScannerTask(List<NodeDTO> nodes, String location, String tenantId) {
-        List<TaskDefinition> tasks = nodes.stream().map(this::createNodeScanTask).collect(Collectors.toList());
-        taskSetPublisher.publishNewTasks(tenantId, location, tasks);
+
+            List<TaskDefinition> tasks = nodes.stream().map(this::createNodeScanTask)
+                .flatMap(Optional::stream).toList();
+            if(!tasks.isEmpty()) {
+                taskSetPublisher.publishNewTasks(tenantId, location, tasks);
+            }
     }
 
     private void sendAzureScannerTask(AzureCredential credential) {
@@ -103,20 +108,25 @@ public class ScannerTaskSetService {
             .build();
     }
 
-    private TaskDefinition createNodeScanTask(NodeDTO node) {
-        List<String> ipAddresses = node.getIpInterfacesList().stream().map(IpInterfaceDTO::getIpAddress).collect(Collectors.toList());
-        String taskId = "node-scan=" + node.getNodeLabel() + "-" + node.getId();
-        Any taskConfig = Any.pack(NodeScanRequest.newBuilder()
-            .setNodeId(node.getId())
-            .addAllIpAddresses(ipAddresses).build());
 
-        return TaskDefinition.newBuilder()
-            .setType(TaskType.SCANNER)
-            .setPluginName("NodeScanner")
-            .setId(taskId)
-            .setNodeId(node.getId())
-            .setConfiguration(taskConfig)
-            .setSchedule(TaskUtils.DEFAULT_SCHEDULE)
-            .build();
+    private Optional<TaskDefinition> createNodeScanTask(NodeDTO node) {
+        Optional<IpInterfaceDTO> ipInterface = node.getIpInterfacesList().stream()
+            .filter(IpInterfaceDTO::getSnmpPrimary).findFirst()
+            .or(() -> node.getIpInterfacesList().stream().findAny());
+        return ipInterface.map(ip -> {
+            String taskId = identityForNodeScan(node.getId());
+            Any taskConfig = Any.pack(NodeScanRequest.newBuilder()
+                .setNodeId(node.getId())
+                .setPrimaryIp(ip.getIpAddress()).build());
+
+            return TaskDefinition.newBuilder()
+                .setType(TaskType.SCANNER)
+                .setPluginName("NodeScanner")
+                .setId(taskId)
+                .setNodeId(node.getId())
+                .setConfiguration(taskConfig)
+                .setSchedule(TaskUtils.DEFAULT_SCHEDULE)
+                .build();
+        }).or(Optional::empty);
     }
 }
